[gd_scene load_steps=14 format=3 uid="uid://bjbh1ows4s0jt"]

[ext_resource type="Script" uid="uid://du5s4r5t34t2x" path="res://scenes/quests/story_quests/elementals/1_room/stealth_components/throwing_enemy_elementals.gd" id="1_scw4n"]
[ext_resource type="SpriteFrames" uid="uid://xa1d60cmdpjf" path="res://scenes/quests/story_quests/elementals/2_newcombat/combat_components/elementals_throwing_enemy.tres" id="3_i6a7f"]
[ext_resource type="SpriteFrames" uid="uid://xa1d60cmdpjf" path="res://scenes/quests/story_quests/elementals/2_combat/combat_components/elementals_throwing_enemy.tres" id="3_mynyo"]
[ext_resource type="Texture2D" uid="uid://dt5lxkbt5rhw2" path="res://scenes/quests/story_quests/elementals/player_components/Fireball/Light.png" id="3_uq667"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vyb7"]
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffq0m"]
size = Vector2(78, 146)

[sub_resource type="Animation" id="Animation_xcanh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sounds/IdleSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sounds/AttackSound:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u0rnr"]
resource_name = "attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"attack anticipation", &"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.65, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 3, 0, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/AttackSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_projectile"
}]
}

[sub_resource type="Animation" id="Animation_cvpou"]
resource_name = "defeated"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"defeated"]
}

[sub_resource type="Animation" id="Animation_ffq0m"]
resource_name = "got hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.112), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uvwc5"]
resource_name = "idle"
length = 0.70001
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/IdleSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lx56l"]
resource_name = "remove"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fbb2g"]
_data = {
&"RESET": SubResource("Animation_xcanh"),
&"attack": SubResource("Animation_u0rnr"),
&"defeated": SubResource("Animation_cvpou"),
&"got hit": SubResource("Animation_ffq0m"),
&"idle": SubResource("Animation_uvwc5"),
&"remove": SubResource("Animation_lx56l")
}

[node name="ThrowingEnemy" type="CharacterBody2D" groups=["enemy", "throwing_enemy"]]
collision_layer = 2
collision_mask = 17
motion_mode = 1
script = ExtResource("1_scw4n")
throwing_period = 3.0
autostart = true
sprite_frames = ExtResource("3_i6a7f")
projectile_speed = 40.0
projectile_sprite_frames = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -74)
sprite_frames = ExtResource("3_mynyo")
animation = &"walk"
autoplay = "idle"
flip_h = true

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D"]
position = Vector2(-1.9999999, 12)
scale = Vector2(0.8, 0.87890816)
color = Color(0.63481534, 0, 0.1935746, 1)
energy = 0.5
shadow_filter = 1
shadow_filter_smooth = 64.0
texture = ExtResource("3_uq667")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_3vyb7")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 5.0

[node name="ProjectileMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-35, -31)

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 128
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -67)
shape = SubResource("RectangleShape2D_ffq0m")
debug_color = Color(0.990065, 0, 0.28292, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_fbb2g")
}

[node name="Sounds" type="Node2D" parent="."]

[node name="IdleSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
volume_db = 5.0
max_distance = 1000.0
bus = &"SFX"

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
volume_db = 5.0
max_distance = 1000.0
bus = &"SFX"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
